fix: series tags spacing

--- a/themes/dimolto/assets/sass/post-item.scss
+++ b/themes/dimolto/assets/sass/post-item.scss
@@ -17,3 +17,10 @@
 .post-item__summary {
   font-size: 0.875rem;
 }
+
+.post-item__summary-item {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
